--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
-    <head>		
+    	<head>		
 		<title>Notre Jeu</title>
-	  </head>
+		<script src="script.js"></script>
+	</head>
