--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 	<body>
 		<p1>Voici notre jeu</p1>
 		
-			<img id="bannerImage" src="images/reveil.png" height="100%" size="100%" alt="reveil" onclick="changeImage('images/x.png')">
+			<img id="bannerImage" src="images/reveil.png" alt="reveil">
+			<img id = "left" id ="bannerImage" src="images/fleche_gauche.png" alt="flèche gauche" onclick="changeImage('images/x.png')">
 			<script>
 				
 				function changeImage(filename) {
