--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="fr">
+
     <head>		
-		
+		<meta charset="utf-8">
+		<link rel="stylesheet" type="text/css" href="style.css">
 		<title>Notre Jeu</title>
+
 		
 	</head>
 
 	<body>
-		<p1>Voici notre jeu</p1>
+		<!--<p1>Voici notre jeu</p1>
 		
 			<img id="bannerImage" src="images/reveil.png" alt="reveil">
 			<img id = "left" id ="bannerImage" src="images/fleche_gauche.png" alt="flèche gauche" onclick="changeImage('images/x.png')">
@@ -19,6 +22,6 @@
 				}
 				</script>
 			<p1>Paragraphe test</p1>
-		
+		  -->
 	</body>
 </html>
