changement n°2(ajout de vidéo + recadrage pleine écran)

--- a/index.html
+++ b/index.html
@@ -23,5 +23,10 @@
 				</script>
 			<p1>Paragraphe test</p1>
 		  -->
+		  <video autoplay muted playsinline>
+  			<source type="video/webm" src="">
+  			<source type="video/mp4" src="images/1_Réveille/1_Réveille Vidéo1.mp4"/>
+		</video>
+
 	</body>
 </html>
