--- a/index.html
+++ b/index.html
@@ -14,19 +14,30 @@
 		
 			<img id="bannerImage" src="images/reveil.png" alt="reveil">
 			<img id = "left" id ="bannerImage" src="images/fleche_gauche.png" alt="flèche gauche" onclick="changeImage('images/x.png')">
-			<script>
+		
 				
-				function changeImage(filename) {
-					let img = document.querySelector("#bannerImage")
-					img.setAttribute("src", filename);
-				}
-				</script>
+				<script src="script.js"></script>
+				
 			<p1>Paragraphe test</p1>
 		  -->
-		  <video autoplay muted playsinline>
+
+
+
+		  <div id="clickstart" onclick="changeImage('images/1_Réveille/5_devant la porte de la taverne.png')">
+		  	<img src="Images/0_lancement du jeu/start game.png">
+		  </div>
+
+		  <img id="Menu" src="Images/0_lancement du jeu/Festival_of_Giving_2020_Menu.webp">
+
+		  <script src="script.js"></script>
+
+
+
+
+		  <!-- <video autoplay muted playsinline>
   			<source type="video/webm" src="">
   			<source type="video/mp4" src="images/1_Réveille/1_Réveille Vidéo1.mp4"/>
-		</video>
+		</video>-->
 
 	</body>
 </html>
