Changement: Html, css et js en entier (switch d'image réussi )

--- a/index.html
+++ b/index.html
@@ -20,14 +20,15 @@
 				
 			<p1>Paragraphe test</p1>
 		  -->
+		  
 
+		  <img id="Menu" src="Images/0_Lancement_du_jeu/Menu.webp"> 
 
+		  <div id = "Menu">
 
-		  <div id="clickstart" onclick="changeImage('images/1_Réveille/5_devant la porte de la taverne.png')">
-		  	<img src="Images/0_lancement du jeu/start game.png">
+		  	<img id = "clickstart" src="Images/0_Lancement_du_jeu/start_game.png" onclick="changeImage('Images/1_Reveille/2_reveille.png')">
+
 		  </div>
-
-		  <img id="Menu" src="Images/0_lancement du jeu/Festival_of_Giving_2020_Menu.webp">
 
 		  <script src="script.js"></script>
 
@@ -41,3 +42,4 @@
 
 	</body>
 </html>
+
