Ajout d'autoplay video fonctionnel et recadrage du Menu.png (ntm mathis W)

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
 		  -->
 		  
 
-		    <img id="Menu" src="Images/0_Lancement_du_jeu/Menu.webp"> 
 
-		  <div id = "Menu">
+		  <div id = "Menu" style = "width: 100% ; height: 100%;">
+		    <img id="ImgMenu" src="Images/0_Lancement_du_jeu/Menu.png"> 
 
-		  	<img id = "clickstart" src="Images/0_Lancement_du_jeu/start_game.png" onclick="changeImage('Images/1_Reveille/2_reveille.png')">
+		  	<img id = "clickstart" src="Images/0_Lancement_du_jeu/start_game.png" onclick="remplace_image_par_vdo()">
 
 		  </div>
 
